overflow fixes

--- a/src/ui/styles/style.css
+++ b/src/ui/styles/style.css
@@ -183,6 +183,10 @@ body {
     padding: 0;
 }
 
+html, body {
+    overflow: hidden;
+}
+
 .loader {
     border-top: 1px solid var(--color-5);
     border-radius: 100%;
